@@ -159,6 +159,7 @@ following names for their contribution to the product.
 * Nx.devnull
 * Nikola Kovacs
 * Nikolaos S. Karastathis
+* Nischay Nahata
 * Olaf Lenz
 * Olivier Finlay Beaton
 * Paul Copperman
